# photobooth

./: .gitignore  CLAUDE.md  README.md  TODO.md  app.py  cadre_photobooth.avif  download_cdn_photos.py  main.py  photo_compositing.py  pyproject.toml  start.sh
.playwright-mcp/: page-2026-07-04T16-07-03-052Z.yml  page-2026-07-04T16-12-29-946Z.yml  page-2026-07-04T16-12-57-408Z.yml  page-2026-07-04T16-13-04-458Z.yml  page-2026-07-04T16-13-34-518Z.yml  page-2026-07-04T16-15-52-777Z.yml  page-2026-07-04T16-15-57-022Z.yml  page-2026-07-04T16-16-00-091Z.yml  page-2026-07-04T16-16-12-462Z.yml  page-2026-07-04T16-16-56-142Z.yml  page-2026-07-04T16-17-05-175Z.yml  page-2026-07-04T16-17-15-705Z.yml  page-2026-07-04T16-18-57-707Z.yml  page-2026-07-04T16-19-09-821Z.yml  page-2026-07-04T16-19-12-223Z.yml  page-2026-07-04T16-19-21-952Z.yml  page-2026-07-04T16-20-55-741Z.yml  page-2026-07-04T16-21-00-271Z.yml  page-2026-07-04T16-21-03-006Z.yml  page-2026-07-04T16-21-13-091Z.yml  page-2026-07-04T17-35-31-843Z.yml
docs/superpowers/plans/: 2026-07-04-photo-background-compositing.md
docs/superpowers/specs/: 2026-07-04-photo-background-compositing-design.md
templates/: gallery.html  index.html
tests/: test_photo_compositing.py  test_safe_photo_path.py
